# generative-ai-labs

./: .gitignore  langchain_first_test.ipynb  readme.md
examples/aws_bedrock_kb/: pyproject.toml
examples/aws_bedrock_kb/src/: main.py  query_kb.py
examples/aws_bedrock_kb/src/models/: models.py
examples/knowledge_graph/: .gitignore  pyproject.toml
examples/knowledge_graph/datasets/: metamorfose_chapter1.txt
examples/knowledge_graph/knowledge_graph/: docker-compose.yaml  kg.py  kg_nebula.py
examples/knowledge_graph/knowledge_graph/.nebula/data/meta0/nebula/0/data/: 000009.sst  IDENTITY  LOG  MANIFEST-000005
examples/knowledge_graph/knowledge_graph/.nebula/data/meta0/nebula/0/wal/0/: 0000000000000000001.wal
examples/knowledge_graph/knowledge_graph/.nebula/data/storage0/nebula/0/data/: IDENTITY  LOG
examples/knowledge_graph/knowledge_graph/.nebula/data/storage0/nebula/1/data/: IDENTITY  LOG
examples/knowledge_graph/knowledge_graph/.nebula/data/storage0/nebula/1/wal/10/: 0000000000000000001.wal
examples/knowledge_graph/knowledge_graph/.nebula/data/storage0/nebula/1/wal/100/: 0000000000000000001.wal
examples/knowledge_graph/knowledge_graph/.nebula/data/storage0/nebula/1/wal/11/: 0000000000000000001.wal
examples/knowledge_graph/knowledge_graph/.nebula/data/storage0/nebula/1/wal/12/: 0000000000000000001.wal
examples/knowledge_graph/knowledge_graph/.nebula/data/storage0/nebula/1/wal/13/: 0000000000000000001.wal
examples/knowledge_graph/knowledge_graph/.nebula/data/storage0/nebula/1/wal/14/: 0000000000000000001.wal
examples/knowledge_graph/knowledge_graph/.nebula/logs/graph/: nebula-graphd.22c997c4faec.root.log.INFO.20240325-001748.1  nebula-graphd.22c997c4faec.root.log.WARNING.20240325-001759.1  nebula-graphd.ERROR  nebula-graphd.INFO  nebula-graphd.WARNING
examples/knowledge_graph/knowledge_graph/.nebula/logs/meta0/: nebula-metad.7c7906cdd437.root.log.ERROR.20240325-001748.1  nebula-metad.7c7906cdd437.root.log.INFO.20240325-001748.1  nebula-metad.ERROR  nebula-metad.INFO  nebula-metad.WARNING
examples/knowledge_graph/knowledge_graph/.nebula/logs/storage0/: nebula-storaged.ERROR  nebula-storaged.INFO  nebula-storaged.WARNING  nebula-storaged.a57eded0c662.root.log.ERROR.20240325-001751.1  nebula-storaged.a57eded0c662.root.log.INFO.20240325-001748.1  nebula-storaged.a57eded0c662.root.log.WARNING.20240325-001748.1
examples/knowledge_graph/knowledge_graph/docker/nebula/: startup.sh
examples/langchain_fundamentals/: langchain_fundamentals.ipynb  (+1 more)
examples/streamlit-app/: pyproject.toml
examples/vector_databases/: README.md  commands.sql  consine_similarity_formula.ipynb  docker-compose.yml  postgre.Dockerfile  postgre_example_llama_index.ipynb  postgres_example.ipynb  postgres_example_ollama.ipynb  pyproject.toml  weaviate_example.ipynb
examples/vector_databases/config/: servers.json
(+85 files in other folders)
