[tool.poetry]
name = "knowledge-graph"
version = "0.1.0"
description = ""
authors = ["Hebert Freitas <hebertrfreitas@gmail.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = ">=3.10.13,<3.12"
llama-index-readers-web = "^0.1.7"
llama-index-graph-stores-nebula = "^0.1.2"
llama-index = "0.10.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

