[tool.poetry]
name = "streamlit-app"
version = "0.1.0"
description = ""
authors = ["Hebert Freitas <hebertrfreitas@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.31.1"
langchain = "^0.1.9"
langchain-openai = "^0.0.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
